make getByDigitalId() return unmodifiable list via .toList()